--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@ body{
     background-color: rgb(228, 228, 228);
     background-image: url('./assests/texture.png');
     background-repeat: repeat;
+    background-size: 512px;
 }
 section{
     max-width: 900px;
@@ -14,9 +15,7 @@ section{
     padding: 0 10px;
 }
 
-/* .App {
 
-} */
 .displayFlex{
     display: flex;
 }
@@ -24,6 +23,10 @@ section{
     flex: 1 1 50%;
     padding: 10px 20px 10px 0;
 }
+.flexWrap-wrap{
+    flex-wrap: wrap;
+}
+
 
 .errorMessage{
     color: red;
@@ -38,16 +41,14 @@ section{
     width: 50%;
     padding: 10px 0;
 }
-.flexWrap-wrap{
-    flex-wrap: wrap;
-}
+
 .submitButton, .resetButton{
     background-color: #803093;
-    padding: 16px 20px;
+    padding: 14px 20px;
     border: none;
     border-radius: 100px;
     color: white;
-    width: 160px;
+    width: 140px;
     box-shadow: 0px 3px 4px gray;
     font-weight: bold;
 }
@@ -113,14 +114,13 @@ input[type="checkbox"]:focus{
     outline: none;
 }
 input[type="checkbox"]:focus + div{
-    border: 3px solid #a1d2ce;
+    border: 3px solid #a1d2ce !important;
 }
 .faceCheckboxBox{
     display: inline-block;
     width: 30px;
     height: 30px;
     background-color: white;
-    border: 3px solid #cfe7e5;
     box-shadow: 0px 1px 4px gray;
     padding: 4px;
 }
@@ -138,8 +138,8 @@ input[type="checkbox"]:focus + div{
     font-size: 14px;
     color: rgb(48, 48, 48);
     padding-bottom: 8px;
-    display: inline-block;}
-
+    display: inline-block;
+}
 /* end checkbox --------------------------------- */
 
 
