--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,6 +57,17 @@ section{
     background-color: white;
     margin-left: 20px;
 }
+.responseMessageDiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.responseMessage{
+    border: 1px solid #585858;
+    border-radius: 4px;
+    padding: 16px 20px;
+}
 
 /* input text----------------------------------- */
 input[type="text"]{
@@ -149,6 +160,7 @@ input[type="checkbox"]:focus + div{
     }
     .flex50{
         flex: 1 1 100%;
+        padding-right: 0;
     }
 
     .checkboxDiv{
